--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
       <div id="profile">
         <img src="assets/foto-1.jpg" alt="Foto fundo colorido" />
-        <p>@maykbrito</p>
+        <p>@HPL_LC</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
